# routes/mainRoutes.js
@@ -10,6 +10,7 @@ const matchingRoutes = require("./subRoutes/match");
 const refereeRoutes = require("./subRoutes/referee");
 const categoryRoutes = require("./subRoutes/category");
 const adminRoutes = require("./subRoutes/adminAccount");
+const notifRoutes = require("./subRoutes/notification");
 const competitionRoutes = require("./subRoutes/competition");
 const participantRoutes = require("./subRoutes/participants");
 
@@ -19,6 +20,7 @@ router.use("/user", userRoutes);
 router.use("/fight", fightRoutes);
 router.use("/image", imageRoutes);
 router.use("/admin", adminRoutes);
+router.use("/notif", notifRoutes);
 router.use("/match", matchingRoutes);
 router.use("/referee", refereeRoutes);
 router.use("/category", categoryRoutes);
